--- a/src/components/countries/country/Country.module.css
+++ b/src/components/countries/country/Country.module.css
@@ -1,9 +1,8 @@
 
 
-
 .country-img  img {
     border-radius: .5rem .5rem 0 0;
-
+    width: 100%;
 }
 
 
